# ytdl-gui

./: .gitignore  .gitmodules  .qmake.stash  CMakeLists.txt  Makefile  README.md  downloadprogress.cpp  downloadprogress.h  downloadstatus.cpp  downloadstatus.h  downloadstatus.ui  main.cpp  mainactions.cpp  mainactions.h  maincommand.cpp  moc_mainactions.cpp  moc_maincommand.cpp  moc_predefs.h  moc_ytdl.cpp  ui_ytdl.h  ytdl.h  ytdl_gui  ytdl_gui.pro
resources/: PKGBUILD  youtubedl-gui.desktop  ytdl-gui.desktop
resources/archlinux/: PKGBUILD  youtubedl-gui.install
src/: canceldownload.cpp  canceldownload.h  downloadprogress.cpp  downloadstatus.cpp  downloadstatus.h  downloadstatus.ui  main.cpp  mainactions.cpp  mainactions.h  maincommand.cpp  maincommand.h  musicbuttons.cpp  musicbuttons.h  readconfig.cpp  readconfig.h  ytdl.cpp  ytdl.h  ytdl.ui  ytdl_gui.pro
